<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    app:cardBackgroundColor="@color/grey_dark"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_medium"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/user_picture"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_user_name"
            style="@style/TextFullName"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="60dp"
            android:layout_toEndOf="@id/img_item_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_photo"
            app:layout_constraintTop_toTopOf="@+id/img_item_photo"
            tools:text="@string/full_name" />

        <TextView
            android:id="@+id/tv_item_followers"
            style="@style/TextUserName"
            app:layout_constraintBottom_toBottomOf="@+id/img_item_photo"
            app:layout_constraintEnd_toEndOf="@+id/tv_item_user_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_user_name"
            app:layout_constraintVertical_bias="0.0"
            tools:text="follower" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_item_followers"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/angle_right"
            android:contentDescription="@string/arrow_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>